# sk4slam

./: .gitmodules  .linterconfig.yaml  CPPLINT.cfg  LICENSE  README.md
algo/numerical/: CMakeLists.txt  package.xml
algo/numerical/include/sk4slam_numerical/: runge_kutta.h
algo/numerical/test/: test_runge_kutta.cc
common/: CMakeLists.txt  package.xml
common/include/sk4slam_common/: entrypoint.h
common/test/: test_example.cc
sk4slam/: CMakeLists.txt  package.xml
sk4slam/python_interface/sk4slam_liegroups/: liegroups_py.cc  liegroups_py.h
sk4slam/src/: Doxyfile
sk4slam/src/sk4slam_backends/: ceres_backend.h  factor_base.h  generic_factors.h  generic_factors_test.cc  gtsam_backend.h
sk4slam/src/sk4slam_backends/ceres/: ceres_helper.h  ceres_helper_test.cc
sk4slam/src/sk4slam_backends/factors/inertial/: imu_preintegration_factor.cc  imu_preintegration_factor.h  imu_preintegration_factor_test.cc
sk4slam/src/sk4slam_backends/factors/visual/: point_reprojection_factor.cc  point_reprojection_factor.h  point_reprojection_factor_test.cc
sk4slam/src/sk4slam_backends/gtsam/: adaptive_marginalization.cc  adaptive_marginalization.h  gtsam_helper.h  gtsam_helper_test.cc  incremental_smoother.cc  incremental_smoother.h
sk4slam/src/sk4slam_basic/: align.h  configurable.h  dynamic_factory.h  likely.h  logging.cc  logging.h  logging_test.cc  platform.h  platform_test.cc  prng.cc  prng.h  reflection.h  reflection_test.cc  serializable.h  string_helper.cc  string_helper.h  string_helper_test.cc  template_helper.h  time.cc  time.h  time_test.cc  unique_id.cc  unique_id.h  unique_id_test.cc  ut_entrypoint.h  ut_example_test.cc
sk4slam/src/sk4slam_camera/: auto_jacobian_impl.h  calibrate.h  calibrate_test.cc  camera_model.h  camera_model_factory.h  camera_model_test.cc  camera_model_types.h  equidistant.h  equidistant_test.cc  fov.h  fov_test.cc  pinhole.h  pinhole_test.cc  radtan.h  radtan_test.cc
sk4slam/src/sk4slam_cpp/: atomic_hash_table.h  atomic_hash_table_test.cc  atomic_list_based_set.h  atomic_list_based_set_test.cc  binary_search.h  binary_search_test.cc  circular_queue.h  circular_queue_test.cc  deque.h  deque_test.cc  hashable_pair.h  mem_pool.h  mem_pool_test.cc  mutex.h  spinlock.h  thread_pool.cc  thread_pool.h  thread_pool_test.cc  timer.cc  timer.h  timer_test.cc  work_queue.h  work_queue_test.cc
sk4slam/src/sk4slam_geometry/: essential_matrix.cc  essential_matrix.h  fundamental_matrix.cc  fundamental_matrix.h  geometry_compile_test.cc  homography_matrix.cc  homography_matrix.h  pnp.cc  pnp.h  pnp_test.cc  pnp_test_helper.h  point_transform.h  point_transform_impl.h  two_view_geometry.cc  two_view_geometry.h  two_view_geometry_test.cc  two_view_geometry_test_helper.h  utils.h
sk4slam/src/sk4slam_imu/: imu_data.cc  imu_data_buffer.cc  imu_data_buffer.h  imu_data_inl.h  imu_handler.cc  imu_handler.h  imu_integration.cc  imu_integration.h  imu_integration_test.cc  imu_model.h
sk4slam/src/sk4slam_liegroups/: Rn.h  Rp.h  Rp_x_SO2_test.cc  Rp_x_SO3_test.cc  Rp_x_SOn.h  S1.h  S1_test.cc  S3.h  S3_test.cc  SE2.h  SE2_test.cc  SE3.h  SE3_test.cc  SO2.h  SO2_test.cc  SO3.h  SO3_test.cc  Sim2.h  Sim2_test.cc  Sim3.h  Sim3_test.cc  SubGLn.h  SubGLn_rx_Rn.h  SubGLn_rx_Rn_test.cc  SubGLn_test.cc  bch.h  constants.h  direct_product.h  general_computation.h  liegroup_base.h  liegroup_data_iterator.h  liegroup_test.cc  liegroup_test_helper.h  matrix_group_helper.h  matrix_group_helper_test.cc  mean.h  mean_test.cc  sim_common.h
sk4slam/src/sk4slam_liegroups/bch_helper/: bch_helper.h  bch_helper.py  bch_helper_test.py
sk4slam/src/sk4slam_math/: math.h  math_basic_test.cc  matrix.h  matrix_test.cc  optimizable_manifold.h  optimizable_manifold_test.cc  polynomial.h  random.h  sac.h  sac_test.cc  vector_space.h
sk4slam/src/sk4slam_msgflow/: message-topic-registration.h  message_handler.cc  message_handler.h  msgflow.h
sk4slam/src/sk4slam_msgflow/maplab-message-flow/: README.md  callback-types.h  message-delivery-queue.h  message-dispatcher-fifo.h  message-dispatcher.h  message-flow-inl.h  message-flow.cc  message-flow.h  message-topic-registration.h  publisher.h  subscriber-list.h  subscriber-network.h  thread-pool.cc  thread-pool.h
sk4slam/src/sk4slam_pose/: pose.h  pose_with_cov.h  pose_with_cov_test.cc  tf.h
sk4slam/src/sk4slam_serial/: serialization_helper.h  yaml_helper.cc  yaml_helper.h
