<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>sk4slam</name>
  <version>0.0.0</version>
  <description>
    Metapackage to build all the packages in sk4slam
  </description>
  <maintainer email="jeffrey@newthinker.net">Jeffrey</maintainer>
  <author>Jeffrey</author>
  <license>New BSD</license>

  <!-- Build Tools based on ROS Version or No ROS -->
  <buildtool_depend condition="$SK4SLAM_ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$SK4SLAM_ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <!-- If SK4SLAM_ROS_VERSION is not set, use CMake as default -->
  <buildtool_depend condition="$SK4SLAM_ROS_VERSION == ''">cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>git</build_depend>

  <!-- Only for unit tests -->
  <build_depend>google-mock</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend condition="$SK4SLAM_ROS_VERSION == 2">ament_cmake_gtest</build_depend>

  <!-- Common dependencies (non-ROS specific) -->
  <depend>eigen</depend>
  <depend>gtsam</depend>
  <depend>libceres-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libyaml-cpp-dev</depend>

  <export>
    <!-- ROS1 build type -->
    <build_type condition="$SK4SLAM_ROS_VERSION == 1">catkin</build_type>
    <!-- ROS2 build type -->
    <build_type condition="$SK4SLAM_ROS_VERSION == 2">ament_cmake</build_type>
    <!-- Non-ROS build type (fallback if SK4SLAM_ROS_VERSION is not set) -->
    <build_type condition="$SK4SLAM_ROS_VERSION == ''">cmake</build_type>

    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
