<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>sk4slam</name>
  <version>0.0.0</version>
  <description>
    Metapackage to build all the packages in sk4slam
  </description>
  <maintainer email="jeffrey@newthinker.net">Jeffrey</maintainer>
  <author>Jeffrey</author>
  <license>New BSD</license>

  <!-- Build tools -->
  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend condition="$SK4SLAM_ROS_BUILDTOOL == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$SK4SLAM_ROS_BUILDTOOL == 2">ament_cmake</buildtool_depend>
  <!-- If SK4SLAM_ROS_BUILDTOOL is not set, use CMake as default -->
  <buildtool_depend condition="$SK4SLAM_ROS_BUILDTOOL == ''">cmake</buildtool_depend>

  <!-- Dependencies required only for building -->
  <build_depend>eigen</build_depend>

  <!-- Dependencies -->
  <depend>gtsam</depend>
  <depend>ceres-solver</depend>
  <depend>opencv</depend>
  <depend>yaml-cpp</depend>

  <!-- Test dependencies -->
  <test_depend>google-mock</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend condition="$SK4SLAM_ROS_BUILDTOOL == 2">ament_cmake_gtest</test_depend>
  <test_depend>gflags</test_depend>
  <test_depend>glog</test_depend>

  <export>
    <!-- ROS1 build type -->
    <build_type condition="$SK4SLAM_ROS_BUILDTOOL == 1">catkin</build_type>
    <!-- ROS2 build type -->
    <build_type condition="$SK4SLAM_ROS_BUILDTOOL == 2">ament_cmake</build_type>
    <!-- Non-ROS build type (fallback if SK4SLAM_ROS_BUILDTOOL is not set) -->
    <build_type condition="$SK4SLAM_ROS_BUILDTOOL == ''">cmake</build_type>

    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
