<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>sk4slam_numerical</name>
  <version>0.0.0</version> 
  <description>sk4slam_numerical</description>
  <maintainer email="jeffrey@newthinker.net">Jeffrey</maintainer>
  <author>Jeffrey</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>sk4slam_common</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>

</package>
